first module for bid timer

--- a/auction_core/auctions/templates/auctions/item_detail.html
+++ b/auction_core/auctions/templates/auctions/item_detail.html
@@ -46,3 +46,5 @@
 <p id="current-bid">₹{{ object.auction.current_bid|floatformat:2|intcomma }}</p>
 <input type="number" id="bid-input" step="0.01">
 <button onclick="placeBid()">Place Bid</button>
+
+<p>Auction Ends At: {{ object.auction.end.time }}</p>
